fix: java 9 support